--- a/index.html
+++ b/index.html
@@ -16,59 +16,68 @@
       <h1 id="screen"></h1>
     </div>
 
-    <div class="container bg-info">
-      <div class="row justify-content-center">
+    <div class="myContainer bg-info">
+      <div class="row align-items-center">
         <div class="col-md-3">
-          <button id="key+" type="button" class="btn btn-lg btn-light key keyOperator" value="+">+</button>
+          <button id="key+" type="button" class="myBtn btn btn-lg btn-light key keyOperator" value="+">+</button>
         </div>
         <div class="col-md-3">
-          <button id="key-" type="button" class="btn btn-lg btn-light key keyOperator" value="-">-</button>
+          <button id="key-" type="button" class="myBtn myBtn btn btn-lg btn-light key keyOperator" value="-">-</button>
         </div>
         <div class="col-md-3">
-          <button id="key*" type="button" class="btn btn-lg btn-light key keyOperator" value="*">*</button>
+          <button id="key*" type="button" class="myBtn btn btn-lg btn-light key keyOperator" value="*">*</button>
         </div>
         <div class="col-md-3">
-          <button id="key/" type="button" class="btn btn-lg btn-light key keyOperator" value="/">/</button>
+          <button id="key/" type="button" class="myBtn btn btn-lg btn-light key keyOperator" value="/">/</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="1">1</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="1">1</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="2">2</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="2">2</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="3">3</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="3">3</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="0">0</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="0">0</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="4">4</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="4">4</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="5">5</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="5">5</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="6">6</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="6">6</button>
         </div>
         <div class="col-md-3">
-          <button id="key=" type="button" class="btn btn-lg btn-primary" value="=">=</button>
+          <button id="key=" type="button" class="myBtn btn btn-lg btn-primary" value="=">=</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="7">7</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="7">7</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="8">8</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="8">8</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-secondary key keyNum" value="9">9</button>
+          <button type="button" class="myBtn btn btn-lg btn-secondary key keyNum" value="9">9</button>
         </div>
         <div class="col-md-3">
-          <button id="keyAC" type="button" class="btn btn-lg btn-danger" value="AC">AC</button>
+          <button id="keyAC" type="button" class="myBtn btn btn-lg btn-danger" value="AC">AC</button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="myBtn btn btn-lg btn-light key keyOperator" value="^">^</button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="myBtn btn btn-lg btn-light key keyOperator" value="(">(</button>
+        </div>
+        <div class="col-md-3">
+          <button type="button" class="myBtn btn btn-lg btn-light key keyOperator" value=")">)</button>
         </div>
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
   </body>
 </html>
